# megaprikl

./: Makefile  README.md  all_critical_files.txt  array_simple  ast.dot  ast.json  ast.txt  compile.sh  compile_factorial.py  compile_short_circuit.py  compile_test.py  debug.py  debug_ast.py  debug_ast2.py  debug_ir.py  demo.asm  demo_array_simple.src  demo_factorial.c  demo_factorial.src  demo_factorial_loop.src  demo_quicksort.src  factorial  factorial.asm  factorial_loop  factorial_test  fix_x86.py  fix_x86_call.py  fix_x86_call2.py  full_results.txt  gen_asm.py  gen_factorial.py  invalid_return_type_mismatch.src  invalid_undeclared_func.src  make_factorial.py  minicc.sh  mycc  pyproject.toml  quicksort  run_all_tests.bat  run_all_tests.py  (+43 more)
docs/: language_spec.md
examples/: correct.src  hello.src
for_def_zachita/: dota2  malloctest.src
sprint4_delivery/: REQUIREMENTS.txt  invalid_duplicate_var.src  invalid_if_non_bool.src  invalid_missing_return.src  invalid_type_mismatch.src  invalid_undeclared.src  invalid_while_non_bool.src  run_all_tests.bat  test_arithmetic.src  test_assignments.src  test_comparisons.src  test_if.src  test_multiple_vars.src  test_nested_if.src  test_two_ifs.src  test_while.src
sprint5/: helper_for_def
sprint6_demo/: )  demo.bat  demo1_ifelse.c  demo2_while.c  demo3_for.c  demo4_shortcircuit.c  demo5_nested.c  demo6_complex.c  output  output.asm  output_fixed.asm  source.c  sprint6_demo.py
src/: main.py
src/codegen/: __init__.py  abi.py  register_allocator.py  stack_frame.py  (+2 more)
tests/: semantic_test.py  test_runner.py  test_sprint7.py
(+82 files in other folders)
