[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicompiler"
version = "0.1.0"
description = "A mini compiler for a C-like language"
readme = "README.md"
authors = [
    {name = "Your Team Name", email = "team@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
compiler = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]